2009-06-17  Scott James Remnant  <scott@netsplit.com>

	* dbus/com.ubuntu.Upstart.Job.xml: Add name, description, author
	and version properties to the job
	* init/job_class.c (job_class_get_name)
	(job_class_get_description, job_class_get_author)
	(job_class_get_version): Add methods to return the property values.
	* init/job_class.h: Add prototypes

	* init/job_process.c (job_process_error_abort): Don't abort() from
	a child process, it confuses people; just exit with an interesting
	error code (which we ignore anyway).

	* dbus/Upstart.conf: Update the D-Bus configuration based on newer
	D-Bus recommended practice with a proper deny-by-default D-Bus,
	making sure to not use send_interface without send_destination.
	Allow introspection as well.

2009-06-17  Jeff Oliver  <Jeffrey.Oliver@panasonic.aero>

	* init/job_process.c (job_process_spawn): Only attempt to set
	the OOM adjustment if set in the class, avoiding issue where /proc
	is not mounted for the first job.
	
2009-06-17  Scott James Remnant  <scott@netsplit.com>

	* init/tests/test_job_process.c (test_handler): Add test cases for a
	respawning job failing while it's post-start or pre-stop processes
	are still running while making sure that it still respawns afterwards.
	* init/job_process.c (job_process_terminated): To fix it, check for
	a running post-start or pre-stop process before checking for a the
	respawn.  That's not enough because then we won't respawn when the
	existing process finishes, so use the goal as a hint.
	* init/job.c (job_next_state): Use that hint goal here, remembering
	to set the goal back to JOB_START afterwards.
	(job_change_goal): Nothing to do in the respawn case
	(job_goal_name, job_goal_from_name): Add the new values
	* init/job.h (job_goal): Add the respawn goal
	* init/tests/test_job.c (test_next_state): Add tests for the respawn
	goal
	(test_goal_name, test_goal_from_name): Tests for the new values

	* configure.ac (AC_CONFIG_FILES): dbus goes before init just in case